--- a/beli3.html
+++ b/beli3.html
@@ -19,22 +19,22 @@
   <form id="myForm">
     <div class="mb-3">
         <label for="pilihintro">Pilih Intro versi Berapa :</label>
-        <input type="text" class="form-control" id="pilihintro" placeholder="Pilih Intro Versi Berapa" name="pilihintro">
+        <input type="text" class="form-control" id="pilihintro" placeholder="Pilih Intro Versi Berapa" name="pilihintro" required>
       </div>
 
     <div class="mb-3 mt-3">
       <label for="textintro">Text Intro :</label>
-      <input type="text" class="form-control" id="textintro" placeholder="Masukan Text Intro Anda" name="textintro">
+      <input type="text" class="form-control" id="textintro" placeholder="Masukan Text Intro Anda" name="textintro" required>
     </div>
 
     <div class="mb-3">
       <label for="warnatext">Warna Text :</label>
-      <input type="text" class="form-control" id="warnatext" placeholder="Masukan Warna Text Anda" name="warnatext">
+      <input type="text" class="form-control" id="warnatext" placeholder="Masukan Warna Text Anda" name="warnatext" required>
     </div>
     
     <div class="mb-3">
       <label for="warnaefektext">Warna Efek Text :</label>
-      <input type="text" class="form-control" id="warnaefektext" placeholder="Masukan Warna Efek Text Anda" name="warnaefektext"><br>
+      <input type="text" class="form-control" id="warnaefektext" placeholder="Masukan Warna Efek Text Anda" name="warnaefektext" required><br>
       
       <!-- Button to Open the Modal -->
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
