--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">R25MFFX STORE</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">STORE 3D INTRO MURAH</p>
+                    <p class="lead fw-normal text-white-50 mb-0">3D INTRO STORE</p>
                 </div>
             </div>
         </header>
