--- a/beli2.html
+++ b/beli2.html
@@ -11,6 +11,12 @@
 <body>
 
 <div class="container mt-3">
+  <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page">V2</li>
+    </ol>
+  </nav>
   <h2>FORM PEMBELIAN
     3D INTRO V2
   </h2>
